syntax = "proto3";

package auth;

option go_package = "github.com/bledbereq/UserServiceAuth/gen/go/auth;ssov1";

// Auth is service for managing permissions and roles.
service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
}

// Объект, который отправляется при вызове RPC-метода Register.
message RegisterRequest {
  string email = 1; 
  string password = 2; 
  string surname =3;
  string name =4;
}

message RegisterResponse {
  int64 user_id = 1; 
}

// То же самое для метода Login()
message LoginRequest {
  string email = 1;
  string password = 2; 
}

message LoginResponse {
  string token = 1; 
}

// То же самое для метода IsAdmin()
message IsAdminRequest {
    string user_id = 1;
  }
  
  message IsAdminResponse {
    bool is__admin = 1; 
  }